# kata-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v0.1-REQUIREMENTS.md  v0.1-ROADMAP.md
.planning/phases/01-foundation-core-display/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-enhanced-display-navigation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: install-hooks.sh  pre-commit
src/: app.rs  event.rs  layout.rs  lib.rs  main.rs  search.rs  state.rs  terminal.rs  update.rs  view.rs
src/components/: detail_pane.rs  help_overlay.rs  mod.rs  search_input.rs  status_bar.rs  tree_view.rs
src/data/: mod.rs  parser.rs  planning_state.rs  project.rs  roadmap.rs
