[package]
name = "kata-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal dashboard for Kata project visibility"
license = "MIT"
repository = "https://github.com/user/kata-tui"

[dependencies]
# TUI Framework
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Markdown Parsing
pulldown-cmark = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Error Handling
color-eyre = "0.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
insta = "1"
tempfile = "3"
